Create view files and Added dagger.

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,5 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">GithubProfile</string>
     <string name="title_profile">ProfileFragment</string>
     <string name="title_repo_list">RepositoryListFragment</string>
 </resources>
