--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">GithubProfile</string>
-    <string name="title_profile">ProfileFragment</string>
-    <string name="title_repo_list">RepositoryListFragment</string>
+    <string name="title_profile">Profile</string>
+    <string name="title_repo_list">RepositoryList</string>
+    <string name="label_github_address">Your Github Account Address :</string>
 </resources>
