bug fixed in bottom navigation selected.changed ic bottom_nav_menu.

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="title_profile">ProfileFragment</string>
-    <string name="title_repo_list">RepositoryListFragment</string>
+    <string name="app_name">GithubProfile</string>
+    <string name="title_profile">Profile</string>
+    <string name="title_profile_fragment">ProfileFragment</string>
+    <string name="title_repo_list">RepositoryList</string>
+    <string name="title_repo_list_fragment">RepositoryListFragment</string>
+    <string name="label_github_address">Your Github Account Address :</string>
 </resources>
