Change ui of ProfileFragment

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -5,5 +5,5 @@
     <string name="title_profile_fragment">ProfileFragment</string>
     <string name="title_repo_list">RepositoryList</string>
     <string name="title_repo_list_fragment">RepositoryListFragment</string>
-    <string name="label_github_address">Your Github Account Address :</string>
+    <string name="label_github_address">Github Account Address :</string>
 </resources>
